@@ -3,7 +3,7 @@ Ext.define('TP.DashboardManagementWindow', {
     extend:      'Ext.window.Window',
     autoShow:     true,
     modal:        true,
-    width:        670,
+    width:        800,
     resizable:    false,
     title:       'Dashboard Managment',
     closeAction: 'destroy',
